<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">保存QQ账号与密码</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="input_account">请输入QQ账号</string>
    <string name="input_password">请输入QQ密码</string>
    <string name="login_success">登录成功</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
</resources>
