<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="28dp"
    android:paddingRight="28dp">

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/account"
            android:textColor="@color/qq_text_main"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/input_account"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/qq_text_main"
            android:textColorHint="@color/qq_text_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/qq_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/qq_text_main"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/qq_text_main"
            android:textColorHint="@color/qq_text_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/qq_line" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:buttonTint="@color/qq_text_hint"
        android:checked="true"
        android:text="@string/remember_password"
        android:textColor="@color/qq_text_main"
        android:textSize="14sp" />

</LinearLayout>
